--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "start": "npx tailwindcss -i ./assets/styles/app.css -o ./dist/output.css --watch"
     }
 }
